second push as i have added new features to the homepage new content

--- a/homepage.html
+++ b/homepage.html
@@ -84,9 +84,52 @@
                         <img class="partthree-icons" src="icons/algorithms-icon.png" alt="">
                         <p class="partthree-text">Roadmaps</p>
                     </div>
+                    <div style="margin-top: 47px;">
+                        <img style="height: 40px; width: 40px; margin-left: 18px; border: 1px solid red"; src="icons/arrowright.png" alt="">
+                        <p style="border: 1px solid red" class="partthree-text2">Browse all</p>
+                    </div>
                 </div>
 
             </div>
+
+            <!-- last section of the body as upcomming Features -->
+             <div class="upcomming">
+                <div class="heading">
+                    <div class="text">
+                        What's Comming next? 
+                    </div>
+                    <div class="subtext">
+                        Get more features as thesite is going to get updated, get all the upcomming features for free as well. Let's see whats comming up next!!
+                    </div>
+                </div>
+
+                <div class="features">
+                    <div class="one">
+                        <div class="header">
+                            Machine Learning
+                        </div>
+                        <div class="subheader">
+                            Alot of machine learning is yet to come
+                        </div>
+                    </div>
+                    <div class="two">
+                        <div class="header">
+                            Machine Learning
+                        </div>
+                        <div class="subheader">
+                            Alot of machine learning is yet to come
+                        </div>
+                    </div>
+                    <div class="three">
+                        <div class="header">
+                            Machine Learning
+                        </div>
+                        <div class="subheader">
+                            Alot of machine learning is yet to come
+                        </div>
+                    </div>
+                </div>
+             </div>
       </div>
 
      <!-- responsive footer section -->
